[package]
name = "nextera-entmt"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
futures-util = "0.3.30"
chrono = "0.4.38"
actix-multipart = "0.7.2"
image = "0.25.2"
actix-files = "0.6.6"
mime_guess = "2.0.5"
futures = "0.3.30"
